// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cross-version equivalence > $ref sibling divergence > 3.0 mode (preserveRefSiblings:false) ignores siblings, 3.1 mode preserves them — outputs differ 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Original target description */
export type Target = {
  id?: string;
};

/** Original target description */
export type RefWithSibling = Target;

/** OK */
export type GetTestResponse = Record<string, unknown>;"
`;

exports[`cross-version equivalence > $ref sibling divergence > 3.0 mode (preserveRefSiblings:false) ignores siblings, 3.1 mode preserves them — outputs differ 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Original target description */
export type Target = {
  id?: string;
};

/** Override from sibling */
export type RefWithSibling = Target;

/** OK */
export type GetTestResponse = Record<string, unknown>;"
`;

exports[`cross-version equivalence > example equivalence > 3.0 example and 3.1 examples produce identical output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** @example "foo" */
export type Label = string;

/** OK */
export type GetTestResponse = Record<string, unknown>;"
`;

exports[`cross-version equivalence > exclusiveMinimum equivalence > 3.0 exclusiveMinimum:boolean + minimum and 3.1 exclusiveMinimum:number produce identical output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Score = number;

/** OK */
export type GetTestResponse = Record<string, unknown>;"
`;

exports[`cross-version equivalence > full spec equivalence > comprehensive 3.0 and 3.1 specs with nullable, exclusiveMinimum, and example produce identical output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Widget = {
  name: string | null;
  score: number;
  /** @example "default" */
  label?: string;
};

/** OK */
export type GetTestResponse = Record<string, unknown>;"
`;

exports[`cross-version equivalence > nullable equivalence > 3.0 nullable:true and 3.1 type:['string','null'] produce identical TypeScript types 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NullableString = string | null;

/** OK */
export type GetTestResponse = Record<string, unknown>;"
`;
